<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:background="#999999">

        <TextView
            android:id="@+id/textView_directory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView" />

	        <LinearLayout android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:orientation="horizontal">
	            
	            <Button
	                android:layout_margin="2dp"
	            android:id="@+id/button_back"
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:textSize="6pt"
	            android:text="@string/to_code_page" />
	        
	        	<Button
	            android:layout_margin="2dp"
	            android:id="@+id/button_finish"
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:textSize="6pt"
	            android:text="@string/finish" />
	            
	        </LinearLayout>
        
        

    </LinearLayout>

   <LinearLayout android:id="@+id/linearList"
		android:clickable="true"        
		android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText android:id="@+id/edit_Catalog_Search"
            android:singleLine="true"
            android:hint="@string/startToSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
	    <ListView
	        android:id="@+id/listView_directory"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    </ListView>
     </LinearLayout>
    
    <LinearLayout android:id="@+id/linearCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
	    
    	<RelativeLayout 
    	    android:layout_width="match_parent"
        	android:layout_height="match_parent">
	        	
    	    <LinearLayout 
    	        android:layout_width="match_parent"
    	        android:layout_height="35dp"
    	        android:layout_alignParentBottom="true"
    	        android:id="@+id/layout_btn_editText"
    	        android:orientation="horizontal">
    	        
    	        <Button android:layout_width="0dp"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:text="convt"
	    	        android:id="@+id/btnConvert"/>
	        	
	    	    <Button android:layout_width="0dp"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:text="jump"
	    	        android:id="@+id/btnJump"/>
	    	    
	    	    <Button android:layout_width="0dp"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="2"
	    	        android:text="find"
	    	        android:id="@+id/btnFind"
	    	        />
	    	    <Button android:layout_width="0dp"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:text="@string/lastWordIcon"
	    	        android:id="@+id/btnLastWord"/>
	    	    
	    	    <Button android:layout_width="0dp"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:text="@string/nextWordIcon"
	    	        android:id="@+id/btnNextWord"
	    	        />
    	    
    	    </LinearLayout>

	        <EditText android:id="@+id/edtCode"
	            android:gravity="top"
	            android:layout_above="@+id/layout_btn_editText"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:textSize="37px"/>

       	</RelativeLayout>

    </LinearLayout>

</LinearLayout>